tests/NormalTests/paczka1/small_fuzzy/44625961.err
Error in line 2: A765 S33 44,9
Error in line 6: rBrXl2VvS S533 22,3
Error in line 11: jKrpUh S533 49,7
Error in line 13: jKrpUh S33 4,4
